@@ -313,6 +313,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Add action=parse to render parser output. Use it instead of action=render which is deprecated.
 * Add rvtoken=rollback to prop=revisions
 * Add meta=allmessages to get messages from site's messages cache.
+* Use bold and italics highlighting only in API help
 
 === Languages updated in 1.12 ===
 
